--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
   <version>0.1</version>
   <packaging>jar</packaging>
 
+  <parent>
+    <groupId>org.argouml</groupId>
+    <artifactId>parentpom-for-modules</artifactId>
+    <version>0.1</version>
+    <relativePath>../argouml/tools/maven/parentpom-for-modules.xml</relativePath>
+  </parent>
+
   <dependencies>
     <dependency>
       <groupId>org.argouml</groupId>
@@ -36,63 +43,5 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
-
-  <!-- Move to parent. -->
-  <repositories>
-    <repository>
-      <id>argouml</id>
-      <name>ArgoUML Release Repository</name>
-      <layout>default</layout>
-      <url>http://argouml-downloads.tigris.org/maven2</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <!-- Move to parent. -->
-  <build>
-    <sourceDirectory>${project.basedir}/src</sourceDirectory>
-    <testSourceDirectory>${project.basedir}/tests</testSourceDirectory>
-    <resources>
-      <resource>
-        <directory>${project.basedir}/src</directory>
-      </resource>
-    </resources>
-    <testResources>
-      <testResource>
-        <directory>${project.basedir}/tests</directory>
-      </testResource>
-    </testResources>
-
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
-  <!-- Move to parent. -->
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.5</version>
-        <configuration>
-          <configLocation>${project.basedir}/../argouml/tools/checkstyle/checkstyle5_argouml.xml</configLocation>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3.1</version>
-      </plugin>
-    </plugins>
-  </reporting>
 
 </project>
