--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
   <version>0.1</version>
   <packaging>jar</packaging>
 
+  <scm>
+    <connection>scm:svn:http://argouml-actionscript3.tigris.org/svn/argouml-actionscript3/trunk</connection>
+    <url>http://argouml-actionscript3.tigris.org/source/browse/argouml-actionscript3/trunk</url>
+  </scm>
+
   <parent>
     <groupId>org.argouml</groupId>
     <artifactId>parentpom-for-modules</artifactId>
