--- a/build.xml
+++ b/build.xml
@@ -30,9 +30,9 @@
     <property name="module.jarfile"
               value="${module.build.dir}/${module.jarfile.name}"/>
 
-    <property name="debug" value="off"/>
+    <property name="debug" value="on"/>
     <property name="optimize" value="on"/>
-    <property name="deprecation" value="on"/>
+    <property name="deprecation" value="off"/>
     <property name="argo.build.dir" value="../argouml/build"/>
     <property name="result.dir" value="../argouml/build"/>
 
@@ -78,6 +78,8 @@
   <target name="run" depends="install">
     <java classname="org.argouml.application.Main"
           fork="yes">
+        <sysproperty key="log4j.configuration"
+                   value="org/argouml/resource/default_console.lcf"/>
         <classpath>
             <fileset dir="${module.build.dir}">
                 <include name="${module.jarfile.name}" />
