--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
   <parent>
     <groupId>org.argouml</groupId>
     <artifactId>parentpom</artifactId>
-    <version>0.4</version>
+    <version>0.5</version>
     <relativePath>../argouml/tools/maven/parentpom.xml</relativePath>
   </parent>
 
   <artifactId>argouml-actionscript3</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <scm>
