--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.argouml</groupId>
     <artifactId>parentpom</artifactId>
-    <version>0.5</version>
+    <version>0.6</version>
     <relativePath>../argouml/tools/maven/parentpom.xml</relativePath>
   </parent>
 
@@ -54,4 +54,9 @@
 Actionscript3 support for argouml.
   </description>
 
+  <scm>
+    <connection>scm:svn:http://argouml-actionscript3.tigris.org/svn/argouml-actionscript3/trunk/</connection>
+    <developerConnection>scm:svn:http://argouml-actionscript3.tigris.org/svn/argouml-actionscript3/trunk/</developerConnection>
+    <url>http://argouml-actionscript3.tigris.org/svn/argouml-actionscript3/trunk/</url>
+  </scm>
 </project>
