Review access change
Change-Id: I4c165cc554c103def75e3e1db81905dfb8c2a91e

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [access]
-	inheritFrom = All-Projects
+	inheritFrom = argouml-tigris-org/argouml
 [submit]
 [project]
 	description = Bring ActionScript 3.0 diagraming possible through ArgoUML.
