Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,6 +5,7 @@
 	description = Bring ActionScript 3.0 diagraming possible through ArgoUML.
 [access "refs/*"]
 	owner = group user/Linus Tolke (linustolke)
+	submit = group user/Linus Tolke (linustolke)
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Linus Tolke (linustolke)
 	label-Verified = -1..+1 group user/Linus Tolke (linustolke)
