--- a/project.config
+++ b/project.config
@@ -6,6 +6,7 @@
 [access "refs/*"]
 	owner = group user/Linus Tolke (linustolke)
 	submit = group user/Linus Tolke (linustolke)
+	exclusiveGroupPermissions = submit
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Linus Tolke (linustolke)
 	label-Verified = -1..+1 group user/Linus Tolke (linustolke)
