--- a/project.config
+++ b/project.config
@@ -1,6 +1,8 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
+	mergeContent = false
+	action = rebase always
 [project]
 	description = Bring ActionScript 3.0 diagraming possible through ArgoUML.
 [access "refs/*"]
@@ -21,3 +23,7 @@
 [access "refs/tags/*"]
 	push = group user/Linus Tolke (linustolke)
 	push = +force group user/Linus Tolke (linustolke)
+[receive]
+	requireChangeId = true
+	createNewChangeForAllNotInTarget = true
+	rejectImplicitMerges = true
