Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,6 +9,7 @@
 	owner = group user/Linus Tolke (linustolke)
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Linus Tolke (linustolke)
+	label-Verified = -1..+1 group ArgoUML-verifiers
 	label-Verified = -1..+1 group user/Linus Tolke (linustolke)
 	push = group user/Linus Tolke (linustolke)
 	read = group user/Linus Tolke (linustolke)
