Point to github instead of tigris.
This fixes the Issue Tracking and the Source Repository.

Change-Id: I7a0385014f464383cf0c96683ae1ce82d79af355
Reviewed-on: https://review.gerrithub.io/c/argouml-tigris-org/argouml-actionscript3/+/487871
Tested-by: <closettop.homelinux.org@gmail.com>
Reviewed-by: Linus Tolke <ltolke@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,7 @@ Actionscript3 support for argouml.
   </description>
 
   <scm>
-    <connection>scm:svn:http://argouml-actionscript3.tigris.org/svn/argouml-actionscript3/trunk/</connection>
-    <developerConnection>scm:svn:http://argouml-actionscript3.tigris.org/svn/argouml-actionscript3/trunk/</developerConnection>
-    <url>http://argouml-actionscript3.tigris.org/source/browse/argouml-actionscript3/trunk</url>
+    <!-- Specify this or maven will add artifactId. -->
+    <url>https://github.com/argouml-tigris-org/${github.site.repositoryName}</url>
   </scm>
 </project>
