Updated to next versions of argouml.
Change-Id: Ie6aa9856fe4e9d2efce6f91e365d8ea105254f82
Reviewed-on: https://review.gerrithub.io/c/argouml-tigris-org/argouml-actionscript3/+/492106
Tested-by: <closettop.homelinux.org@gmail.com>
Reviewed-by: Linus Tolke <ltolke@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,14 @@
     <dependency>
       <groupId>org.argouml</groupId>
       <artifactId>argouml</artifactId>
-      <version>0.34</version>
+      <version>0.35.2-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.argouml</groupId>
       <artifactId>argouml-model</artifactId>
-      <version>0.34</version>
+      <version>0.35.2-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
