--- a/project.config
+++ b/project.config
@@ -1,8 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	mergeContent = false
-	action = rebase always
+	action = rebase if necessary
 [project]
 	description = Bring ActionScript 3.0 diagraming possible through ArgoUML.
 [access "refs/*"]
@@ -28,3 +27,13 @@
 	requireChangeId = true
 	createNewChangeForAllNotInTarget = true
 	rejectImplicitMerges = true
+[plugin "zuul-results-summary"]
+	enabled = false
+[plugin "uploadvalidator"]
+	blockedContentTypeWhitelist = false
+	maxPathLength = 0
+	rejectDuplicatePathnames = true
+	rejectDuplicatePathnamesLocale = en
+	rejectSubmodule = true
+	rejectSymlink = true
+	rejectWindowsLineEndings = false
