--- a/project.config
+++ b/project.config
@@ -10,7 +10,9 @@
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Linus Tolke (linustolke)
 	label-Verified = -1..+1 group user/Linus Tolke (linustolke)
+	push = group Registered Users
 	push = group user/Linus Tolke (linustolke)
+	read = group Anonymous Users
 	read = group user/Linus Tolke (linustolke)
 	rebase = group user/Linus Tolke (linustolke)
 	removeReviewer = group user/Linus Tolke (linustolke)
@@ -19,6 +21,7 @@
 	create = group user/Linus Tolke (linustolke)
 	push = +force group user/Linus Tolke (linustolke)
 	pushMerge = group user/Linus Tolke (linustolke)
+	read = group Anonymous Users
 	read = group user/Linus Tolke (linustolke)
 [access "refs/tags/*"]
 	push = group user/Linus Tolke (linustolke)
